<resources>
    <string name="app_name">SIDORA</string>
    <string name="go_to_registration_page">Go To Registration Page</string>
    <string name="donor_registration">Donor Registration</string>
    <string name="sign_up_to_continue">Sign Up to Continue</string>
    <string name="enter_full_name">Enter Full Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up_now">Sign Up Now</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign In Here</string>

    <string-array name="bloodgroups">
        <item>Select your blood group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>O+</item>
        <item>O-</item>
    </string-array>
</resources>