<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#Be5025"
    tools:context=".DonorRegistrationActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        android:background="#fff"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:src="@drawable/logo"
                android:contentDescription="TODO" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/donor_registration"
                android:textColor="#000"
                android:textSize="25sp"
                android:textStyle="bold"/>

            <TextView
                android:text="@string/sign_up_to_continue"
                android:textColor="#000"
                android:textSize="20sp"
                android:gravity="center"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:layout_marginBottom="20dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/profile"
                    app:civ_border_width="2dp"
                    android:layout_gravity="center"
                    app:civ_border_color="#FF000000"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="#000"
                    app:hintTextAppearance="@color/colorPrimary"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerFullName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_full_name"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_person"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="#000"
                    app:hintTextAppearance="@color/colorPrimary"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerPhoneNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_phone_number"
                        android:inputType="number"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_phone"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:id="@+id/bloodGroupsSpinner"
                    android:background="#fff"
                    android:layout_marginStart="9dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_width="match_parent"
                    android:entries="@array/bloodgroups"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="#000"
                    app:hintTextAppearance="@color/colorPrimary"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/registerEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:drawablePadding="10dp"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textColorHint="#000"
                        android:drawableStart="@drawable/ic_mail"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="#000"
                    app:hintTextAppearance="@color/colorPrimary"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock"
                    android:drawablePadding="10dp"
                    android:hint="@string/enter_password"
                    android:inputType="textPassword"
                    android:textColor="#000"
                    android:textColorHint="#000"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="350dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/buttons_background"
                    android:text="@string/sign_up_now"
                    android:textAllCaps="false"
                    android:textColor="#fff"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/backButton"
                    android:text="@string/already_registered_sign_in_here"
                    android:layout_marginTop="15dp"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</ScrollView>